--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- Header -->
     <div class="header">
         <canvas id="header-canvas"></canvas>
+        <div class="canvas-overlay"></div>
         <div class="desc-section">
             <div class="text-container">
                 <div class="text">Fun</div>
