--- a/index.html
+++ b/index.html
@@ -7,48 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gage Henderson</title>
 
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-        rel="stylesheet">
-
     <!-- Stylesheets -->
+    <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/home.css">
 
+    <!-- External -->
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://cdn.jsdelivr.net/npm/three@0.173.0/build/three.module.js",
+          "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.173.0/examples/jsm/"
+        }
+      }
+    </script>
+
     <!-- Javscript -->
-    <script src="scripts/home-header-canvas.js"></script>
+    <script type="module" src="scripts/home-header.js"></script>
 </head>
 
 <body>
 
     <!-- Header -->
     <div class="header">
-        <canvas id="header-canvas"></canvas>
-        <div class="canvas-overlay"></div>
-        <div class="desc-section">
-            <div class="text-container">
-                <div class="text">Fun</div>
-            </div>
-            <div class="text-container">
-                <div class="text">Creative</div>
-            </div>
-            <div class="text-container">
-                <div class="text">Interactive Software Development</div>
-            </div>
-        </div>
-
-        <div class="vertical-divider"></div>
-
         <div class="name-section">
-            <div class="text-container">
-                <div class="text">Gage</div>
-            </div>
-            <div class="text-container">
-                <div class="text">Henderson</div>
-            </div>
+            <div class="name">Gage Henderson</div>
         </div>
     </div>
 
