--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     </script>
 
     <!-- Javscript -->
+    <script type="module" src="scripts/crt-shader.js"></script>
+    <script type="module" src="scripts/setup-header-threejs.js"></script>
     <script type="module" src="scripts/home-header.js"></script>
 </head>
 
