--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Saira:ital,wght@0,100..900;1,100..900&family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&family=Teko:wght@300..700&display=swap" rel="stylesheet">
 
     <!-- Javscript -->
+    <script type="module" src="scripts/home-header/Node.js"></script>
     <script type="module" src="scripts/home-header/NodeWeb.js"></script>
 </head>
 
